replace scalamock by mockito